--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "class-variance-authority": "^0.7.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "iconsax-react": "^0.0.8",
